syntax = "proto3";

package common;

message HealthCheck {
  string status = 1;
  string component = 2;
  string description = 3;
}

message HealthResponse {
  string service_name = 1;
  string status = 2;
  repeated HealthCheck checks = 3;
  string duration = 4;
}
